--- a/docs_manager/documents/templates/documents/documents_list.html
+++ b/docs_manager/documents/templates/documents/documents_list.html
@@ -5,7 +5,7 @@
     {% for document in documents %}
         <li>
             <h2>{{ document.title }}</h2> - {{ document.uploaded_at }}
-            
+            <a href="{% url 'documents_details' document.pk %}">View Details</a>
         </li>
         {% empty %}
             <li>No documents available.</li>
