--- a/docs_manager/apps/documents/templates/documents/documents_upload.html
+++ b/docs_manager/apps/documents/templates/documents/documents_upload.html
@@ -1,7 +1,22 @@
 <h1>Upload Document</h1>
-<form method="post" enctype="multipart/form-data">
+<form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
+    <div class="form-group">
+        <label for="id_title">Título</label>
+        {{ form.title }}
+    </div>
+    
+    <div class="form-group">
+        <label for="id_description">Descrição</label>
+        {{ form.description }}
+    </div>
+    
+    <div class="form-group">
+        <label for="id_file">Arquivo</label>
+        <input type="file" name="file" id="id_file" class="form-control" 
+               accept=".pdf,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.txt,.jpg,.png,.gif,.zip" required>
+    </div>
+    
+    <button type="submit" class="btn btn-primary">Upload</button>
 </form>
 <a href="{% url 'documents_list' %}">Back</a>
