style: estiliza base da listagem de documentos

--- a/docs_manager/apps/users/templates/users/login.html
+++ b/docs_manager/apps/users/templates/users/login.html
@@ -14,8 +14,8 @@
         <div class="container-logo">
             <img src="{% static 'img/logo.svg' %}" alt="Logo do Sistema de Documentos">
         </div>
-        <h1 class="title-h1">Sistema de Documentos</h1>
-        <p class="subtitle-p">Faça login para acessar seus documentos</p>
+        <h1 >Sistema de Documentos</h1>
+        <h2>Faça login para acessar seus documentos</h2>
         <form method="post" class="form-login">
             {% csrf_token %}
             
