style: estiliza base de detalhes do documento

--- a/docs_manager/apps/users/templates/users/login.html
+++ b/docs_manager/apps/users/templates/users/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="container-login">
         <div class="container-logo">
             <img src="{% static 'img/logo.svg' %}" alt="Logo do Sistema de Documentos">
         </div>
@@ -34,7 +34,7 @@
                 </svg>
                 {{ form.password }}
             </div>
-            <button type="submit" class="button">Entrar</button>
+            <button type="submit" class="button-login">Entrar</button>
         </form>
     </div>
 </body>
