--- a/docs_manager/apps/documents/templates/documents/documents_details.html
+++ b/docs_manager/apps/documents/templates/documents/documents_details.html
@@ -1,20 +1,103 @@
-<h1>{{ document.title }}</h1>
-<p>{{ document.description }}</p>
-<a href="{{ document.file.url }}" target="_blank">Download</a>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/global.css' %}">
+    <title>Document</title>
+</head>
+<body >
+    <a href="{% url 'documents_list' %}">Voltar</a>
+    <!-- editar , baixar e excluir -->
+                <div class="container">
+                    <div style="display: flex; flex-direction: row;">
+                        <div class="card-info">
+                            <img src="{% static 'img/icon-document.svg' %}" alt="Thumbnail">
+                            <div class="card-info-texts">
+                                <h3>{{ document.title }}</h3>
+                                <div class="card-info-texts-details">
+                                    <p>{{document.file_extension}}</p>
+                                    <p>{{document.get_file_size_display}}</p>
+                                    <p>{{ document.uploaded_at }}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-icons">
 
-<h2>Comments</h2>
-<ul>
-{% for comment in document.comments.all %}
-    <li>{{ comment.text }} - {{ comment.created_at }} por {{ comment.author }}</li>
-{% empty %}
-    <li>No comments yet.</li>
-{% endfor %}
-</ul>
 
-<h3>Add Comment</h3>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Add Comment</button>
-</form>
-<a href="{% url 'documents_list' %}">Back</a>
+                            <!-- icone de baixar -->
+                            <a href="{{ document.file.url }}" download>
+                                <div class="buttons-details-download">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                                    <path d="M10 12.5V2.5" stroke="#4A5565" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M17.5 12.5V15.8333C17.5 16.2754 17.3244 16.6993 17.0118 17.0118C16.6993 17.3244 16.2754 17.5 15.8333 17.5H4.16667C3.72464 17.5 3.30072 17.3244 2.98816 17.0118C2.67559 16.6993 2.5 16.2754 2.5 15.8333V12.5" stroke="#4A5565" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M5.83337 8.33337L10 12.5L14.1667 8.33337" stroke="#4A5565" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                    <p>Download</p>
+                                </div>
+                            </a>
+                            <!-- Botão de exclusão -->
+                            <form method="POST" action="{% url 'documents_delete' document.pk %}" style="display:inline;">
+                                {% csrf_token %}
+                                <button type="submit" class="buttons-details-delete" onclick="return confirm('Are you sure you want to delete this document?');"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                                    <path d="M8.33337 9.16663V14.1666" stroke="#E7000B" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M11.6666 9.16663V14.1666" stroke="#E7000B" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M15.8333 5V16.6667C15.8333 17.1087 15.6577 17.5326 15.3451 17.8452C15.0326 18.1577 14.6087 18.3333 14.1666 18.3333H5.83329C5.39127 18.3333 4.96734 18.1577 4.65478 17.8452C4.34222 17.5326 4.16663 17.1087 4.16663 16.6667V5" stroke="#E7000B" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M2.5 5H17.5" stroke="#E7000B" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M6.66663 4.99996V3.33329C6.66663 2.89127 6.84222 2.46734 7.15478 2.15478C7.46734 1.84222 7.89127 1.66663 8.33329 1.66663H11.6666C12.1087 1.66663 12.5326 1.84222 12.8451 2.15478C13.1577 2.46734 13.3333 2.89127 13.3333 3.33329V4.99996" stroke="#E7000B" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                    <p>Excluir</p>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+
+                    <div>
+                        <h3 class="subtitle-details">Descrição</h3>
+                        <p class="text-details">{{ document.description }}</p>
+                        <h3 class="subtitle-details">Enviador por</h3>
+                        <p class="text-details">{{ document.author }}</p>
+                    </div>
+                </div>
+        </div>
+
+    <!-- visualização do documento -->
+    <div class="container">
+        <h3>Visualização do Documento</h3>
+            <!-- Exibir o documento, por exemplo, usando um iframe para PDFs ou um link para outros tipos de arquivos -->
+
+    </div>
+
+    <!-- seção de comentários -->
+    <div class="container">
+        <h3>Comentários ({{ document.comments.count }})</h3>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Add Comment</button>
+        </form>
+
+        <!-- Listar comentários existentes -->
+        <div>
+            {% for comment in document.comments.all %}
+                <div>
+                    <div>img</div>
+                    <div>
+                        <p>{{ comment.author }}</p>
+                        <p>{{ comment.created_at }}</p>
+                        <p>{{ comment.text }}</p>
+                    </div>
+                </div>
+            {% empty %}
+                <p>Sem comentários ainda.</p>
+            {% endfor %}
+        </div>
+    </div>
+</body>
+</html>
+
+
