--- a/docs_manager/apps/documents/templates/documents/documents_list.html
+++ b/docs_manager/apps/documents/templates/documents/documents_list.html
@@ -1,9 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Document Manager</title>
-    {% load static %}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/global.css' %}">
 </head>
 
@@ -17,13 +20,18 @@
     <div class="container">
         <div class="container-title-upload">
             <div>
-                <img src="{% static 'img/logo.svg' %}" alt="">
-                <h1>Documents</h1>
-                <h2>Gerencie seus arquivos e documentos</h2>
+                <div class="container-logo">
+                    <img src="{% static 'img/logo.svg' %}" alt="Logo do Sistema de Documentos">
+                </div>
+                <div class="container-title">
+                    <h1>Lista de documentos</h1>
+                    <h2>Gerencie seus arquivos e documentos</h2>
+                </div>
             </div>
+
             <!-- Botão de upload -->
             <a href="{% url 'documents_upload' %}">
-            <div class="upload">
+            <div class="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                     <path d="M10 2.5V12.5" stroke="white" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M14.1666 6.66667L9.99998 2.5L5.83331 6.66667" stroke="white" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
@@ -53,7 +61,7 @@
                 <div class="card-document">
                     <div class="card-info">
                         <img src="{% static 'img/icon-document.svg' %}" alt="Thumbnail">
-                        <div class=".card-info-texts">
+                        <div class="card-info-texts">
                             <h3>{{ document.title }} - {{document.author}}</h3>
                             <div class="card-info-texts-details">
                                 <p>{{document.file_extension}}</p>
@@ -63,6 +71,8 @@
                         </div>
                     </div>
                     <div class="card-icons">
+
+                        <!-- icone de visualizar -->
                         <a href="{% url 'documents_details' document.pk %}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                            <path d="M1.71835 10.2901C1.6489 10.103 1.6489 9.89715 1.71835 9.71006C2.39476 8.06993 3.54294 6.66759 5.01732 5.6808C6.4917 4.69402 8.22588 4.16724 10 4.16724C11.7741 4.16724 13.5083 4.69402 14.9827 5.6808C16.4571 6.66759 17.6053 8.06993 18.2817 9.71006C18.3511 9.89715 18.3511 10.103 18.2817 10.2901C17.6053 11.9302 16.4571 13.3325 14.9827 14.3193C13.5083 15.3061 11.7741 15.8329 10 15.8329C8.22588 15.8329 6.4917 15.3061 5.01732 14.3193C3.54294 13.3325 2.39476 11.9302 1.71835 10.2901Z" stroke="#4A5565" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
@@ -71,17 +81,18 @@
                         </a> 
                         
                         <!-- icone de baixar -->
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                        <path d="M10 12.5V2.5" stroke="#4A5565" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M17.5 12.5V15.8333C17.5 16.2754 17.3244 16.6993 17.0118 17.0118C16.6993 17.3244 16.2754 17.5 15.8333 17.5H4.16667C3.72464 17.5 3.30072 17.3244 2.98816 17.0118C2.67559 16.6993 2.5 16.2754 2.5 15.8333V12.5" stroke="#4A5565" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M5.83337 8.33337L10 12.5L14.1667 8.33337" stroke="#4A5565" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-                        <a href="{{ document.file.url }}" download>Download</a> |
-                        </svg>
+                        <a href="{{ document.file.url }}" download>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                            <path d="M10 12.5V2.5" stroke="#4A5565" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M17.5 12.5V15.8333C17.5 16.2754 17.3244 16.6993 17.0118 17.0118C16.6993 17.3244 16.2754 17.5 15.8333 17.5H4.16667C3.72464 17.5 3.30072 17.3244 2.98816 17.0118C2.67559 16.6993 2.5 16.2754 2.5 15.8333V12.5" stroke="#4A5565" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M5.83337 8.33337L10 12.5L14.1667 8.33337" stroke="#4A5565" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </a>
 
                         <!-- Botão de exclusão -->
                         <form method="POST" action="{% url 'documents_delete' document.pk %}" style="display:inline;">
                             {% csrf_token %}
-                            <button type="submit" style=" all: unset;" onclick="return confirm('Are you sure you want to delete this document?');"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                            <button type="submit" style=" all: unset; cursor: pointer;" onclick="return confirm('Are you sure you want to delete this document?');"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                                 <path d="M8.33337 9.16663V14.1666" stroke="#E7000B" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
                                 <path d="M11.6666 9.16663V14.1666" stroke="#E7000B" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
                                 <path d="M15.8333 5V16.6667C15.8333 17.1087 15.6577 17.5326 15.3451 17.8452C15.0326 18.1577 14.6087 18.3333 14.1666 18.3333H5.83329C5.39127 18.3333 4.96734 18.1577 4.65478 17.8452C4.34222 17.5326 4.16663 17.1087 4.16663 16.6667V5" stroke="#E7000B" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
