--- a/docs_manager/apps/users/templates/users/login.html
+++ b/docs_manager/apps/users/templates/users/login.html
@@ -19,20 +19,26 @@
         <form method="post" class="form-login">
             {% csrf_token %}
             
-            <div class="input-group">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                <path d="M18.3333 5.83334L10.8408 10.6058C10.5866 10.7535 10.2978 10.8313 10.0037 10.8313C9.70971 10.8313 9.42091 10.7535 9.16666 10.6058L1.66666 5.83334" stroke="#99A1AF" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M16.6667 3.33334H3.33332C2.41285 3.33334 1.66666 4.07954 1.66666 5.00001V15C1.66666 15.9205 2.41285 16.6667 3.33332 16.6667H16.6667C17.5871 16.6667 18.3333 15.9205 18.3333 15V5.00001C18.3333 4.07954 17.5871 3.33334 16.6667 3.33334Z" stroke="#99A1AF" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                {{ form.username }}
+            <div>
+                <label for="id_username" class="label-input">Usuário</label>
+                <div class="input-group">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                    <path d="M18.3333 5.83334L10.8408 10.6058C10.5866 10.7535 10.2978 10.8313 10.0037 10.8313C9.70971 10.8313 9.42091 10.7535 9.16666 10.6058L1.66666 5.83334" stroke="#99A1AF" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M16.6667 3.33334H3.33332C2.41285 3.33334 1.66666 4.07954 1.66666 5.00001V15C1.66666 15.9205 2.41285 16.6667 3.33332 16.6667H16.6667C17.5871 16.6667 18.3333 15.9205 18.3333 15V5.00001C18.3333 4.07954 17.5871 3.33334 16.6667 3.33334Z" stroke="#99A1AF" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    {{ form.username }}
                 
+                </div>
             </div>
-            <div class="input-group">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                <path d="M15.8333 9.16666H4.16667C3.24619 9.16666 2.5 9.91285 2.5 10.8333V16.6667C2.5 17.5871 3.24619 18.3333 4.16667 18.3333H15.8333C16.7538 18.3333 17.5 17.5871 17.5 16.6667V10.8333C17.5 9.91285 16.7538 9.16666 15.8333 9.16666Z" stroke="#99A1AF" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M5.83334 9.16666V5.83332C5.83334 4.72825 6.27233 3.66845 7.05373 2.88704C7.83513 2.10564 8.89494 1.66666 10 1.66666C11.1051 1.66666 12.1649 2.10564 12.9463 2.88704C13.7277 3.66845 14.1667 4.72825 14.1667 5.83332V9.16666" stroke="#99A1AF" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                {{ form.password }}
+            <div>
+                <label for="id_password" class="label-input">Senha</label>
+                <div class="input-group">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                    <path d="M15.8333 9.16666H4.16667C3.24619 9.16666 2.5 9.91285 2.5 10.8333V16.6667C2.5 17.5871 3.24619 18.3333 4.16667 18.3333H15.8333C16.7538 18.3333 17.5 17.5871 17.5 16.6667V10.8333C17.5 9.91285 16.7538 9.16666 15.8333 9.16666Z" stroke="#99A1AF" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M5.83334 9.16666V5.83332C5.83334 4.72825 6.27233 3.66845 7.05373 2.88704C7.83513 2.10564 8.89494 1.66666 10 1.66666C11.1051 1.66666 12.1649 2.10564 12.9463 2.88704C13.7277 3.66845 14.1667 4.72825 14.1667 5.83332V9.16666" stroke="#99A1AF" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    {{ form.password }}
+                </div>
             </div>
             <button type="submit" class="button-login">Entrar</button>
         </form>
