fix(style): conserta width em detalhes

--- a/docs_manager/apps/documents/templates/documents/documents_details.html
+++ b/docs_manager/apps/documents/templates/documents/documents_details.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     
-    <div style="display: flex; flex-direction: column; gap: 16px; width: auto">
+    <div style="display: flex; flex-direction: column; gap: 16px; width: auto; width: 100%; max-width: 1200px; margin: 0 auto; padding: 16px;">
 
         <a class="back-button" href="{% url 'documents_list' %}">
       <svg
