--- a/docs_manager/apps/documents/templates/documents/documents_upload.html
+++ b/docs_manager/apps/documents/templates/documents/documents_upload.html
@@ -9,7 +9,7 @@
     <title>Upload Document</title>
 </head>
 <body>
-<div style="display: flex; flex-direction: column; gap: 16px; width: auto;max-width: 1200px; margin: 0 auto; padding: 16px;">
+<div class="page">
 
     <a class="back-button" href="{% url 'documents_list' %}">
         <svg
