--- a/docs_manager/static/css/global.css
+++ b/docs_manager/static/css/global.css
@@ -88,7 +88,16 @@ input[type="file"] {
 }
 
 
-
+.page{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: auto;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 16px;
+}
 
 
 
