--- a/docs_manager/apps/documents/templates/documents/documents_upload.html
+++ b/docs_manager/apps/documents/templates/documents/documents_upload.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'users/login.css' %}">
     <link rel="stylesheet" href="{% static 'css/global.css' %}">
-    <title>Upload Document</title>
+    <title>Upload de Documento</title>
 </head>
 <body>
-<div class="page">
-
+<div style="display: flex; flex-direction: column; gap: 16px; width: auto;max-width: 1200px; margin: 0 auto; padding: 16px;">
     <a class="back-button" href="{% url 'documents_list' %}">
         <svg
         xmlns="http://www.w3.org/2000/svg"
