--- a/docs_manager/apps/documents/templates/documents/documents_details.html
+++ b/docs_manager/apps/documents/templates/documents/documents_details.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="{% static 'css/global.css' %}" />
-    <title>Document</title>
+    <title>Detalhes do Documento</title>
   </head>
   <body>
     
@@ -181,6 +181,7 @@
       <div class="container">
         <h3 class="title-container-details">Visualização do Documento</h3>
         {% if document.file_extension|lower == '.pdf' %}
+            <a href="{{ document.file.url }}" target="_blank" style="color: #4F39F6">Clique aqui pra visualizar o pdf em outra janela</a>
             <!-- <iframe 
                 src="{{ document.file.url }}" 
                 type="application/pdf"
