style: ajusta responsividade de detalhes do documento

--- a/docs_manager/apps/documents/templates/documents/documents_details.html
+++ b/docs_manager/apps/documents/templates/documents/documents_details.html
@@ -46,7 +46,7 @@
 
 
       <div class="container">
-        <div style="display: flex; flex-direction: row">
+        <div class="container-cards-details">
           <div class="card-info">
             <img src="{% static 'img/icon-document.svg' %}" alt="Thumbnail" />
             <div class="card-info-texts">
