docs(README): adiciona readme ao repositório

--- a/docs_manager/apps/users/templates/users/login.html
+++ b/docs_manager/apps/users/templates/users/login.html
@@ -12,7 +12,7 @@
 
     <div class="container-login">
         <div class="container-logo">
-            <img src="{% static 'img/logo.svg' %}" alt="Logo do Sistema de Documentos">
+            <img src="{% static 'img/logotipo.svg' %}" alt="Logo do Sistema de Documentos">
         </div>
         <h1 >Sistema de Documentos</h1>
         <h2>Faça login para acessar seus documentos</h2>
