feat: adiciona logo nas abas das páginas

--- a/docs_manager/apps/documents/templates/documents/documents_details.html
+++ b/docs_manager/apps/documents/templates/documents/documents_details.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="{% static 'css/global.css' %}" />
+    <link rel="icon" href="{% static 'img/logo.svg' %}"  type="image/svg+xml">
     <title>Detalhes do Documento</title>
   </head>
   <body>
