--- a/docs_manager/apps/documents/templates/documents/documents_list.html
+++ b/docs_manager/apps/documents/templates/documents/documents_list.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="{% static 'css/global.css' %}" />
+    <link rel="icon" href="{% static 'img/logo.svg' %}"  type="image/svg+xml">
+
     <script src="{% static 'documents/js/search.js' %}" defer></script>
   </head>
 
