--- a/docs_manager/apps/documents/templates/documents/documents_upload.html
+++ b/docs_manager/apps/documents/templates/documents/documents_upload.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/global.css' %}">
+    <link rel="icon" href="{% static 'img/logo.svg' %}"  type="image/svg+xml">
     <title>Upload de Documento</title>
 </head>
 <body>
