--- a/docs_manager/apps/users/templates/users/login.html
+++ b/docs_manager/apps/users/templates/users/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'users/login.css' %}">
     <link rel="stylesheet" href="{% static 'css/global.css' %}">
+    <link rel="icon" href="{% static 'img/logo.svg' %}"  type="image/svg+xml">
     <title>Login</title>
 </head>
 <body>
