fix: altera titulo da página de upload de documentos

--- a/docs_manager/apps/documents/templates/documents/documents_upload.html
+++ b/docs_manager/apps/documents/templates/documents/documents_upload.html
@@ -37,7 +37,7 @@
     </a>
     
     <div class="container-login">
-        <h1>Sistema de Documentos</h1>
+        <h1>Upload de Documento</h1>
         <h2>Envie seus documentos de até 50mb</h2>
         
         <form method="POST" enctype="multipart/form-data" class="form-login">
